[tool.poetry]
package-mode = false
name = "sell-that-sheet-api"
version = "0.1.0"
description = ""
authors = ["wsmcrn <zs1cyranik@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
Django = "^5.0.3"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
drf-yasg = "^1.21.7"
openpyxl = "^3.1.2"
xlwt = "^1.3.0"
pandas = "^2.2.1"
mysqlclient = "^2.2.4"
requests-oauthlib = "^2.0.0"
setuptools = "^69.5.1"
black = {extras = ["d"], version = "^24.4.2"}
django-filter = "^24.3"
pillow = "^11.0.0"
pydantic = "^2.9.2"
openai = "^1.58.1"
django-extensions = "^3.2.3"
tenacity = "^9.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
